<resources>
    <string name="app_name">Booking Filght</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ngaydi">Departure</string>
    <string name="ngayve">Return</string>
    <string name="noidi">From</string>
    <string name="noiden">To</string>
    <string name="nguoitren12">Adult (>12 age)</string>
    <string name="nguoiduoi12">Adult(2-12 age)</string>
    <string name="trenho">Children under 2 age</string>
    <string name="khuhoi">Round-trip</string>
    <string name="search">Search</string>
    <string name="toRegister">You are new customer ? Register now</string>
    <string name="toLogin">Already have an Account ? Login now</string>
    <string name="signIN">Sign in</string>
    <string name="register">Register</string>
    <string name="titleRegister">Register to begin your new journey</string>
    <string name="typeTicket">Type ticket</string>
    <string name="titleBooking">Where do you want to go?</string>
    <string name="titleBooking2">Hello you!!</string>
    <string name="updateCustomer">Update</string>
</resources>